--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Acme&family=Metal&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.acme-regular {
+	font-family: "Acme", sans-serif;
+	font-weight: 900;
+	font-style: normal;
+}
+.metal-regular {
+  font-family: "Metal", serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: larger;
+}
+
+.button {
+	display: flex;
+}
+
+.box {
+	width: 35px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 15px;
+	font-weight: 700;
+	color: #222831;
+	transition: all 0.8s;
+	cursor: pointer;
+	position: relative;
+	background:#76ABAE;
+	overflow: hidden;
+}
+
+.box:before {
+	content: "❤️";
+	position: absolute;
+	top: 0;
+	background: #222831;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transform: translateY(100%);
+	transition: transform 0.4s;
+	color: #76ABAE;
+}
+.box:nth-child(2)::before {
+	transform: translateY(-100%);
+	content: "M";
+}
+.box:nth-child(3)::before {
+	transform: translateY(-100%);
+	content: "O";
+}
+
+.box:nth-child(4)::before {
+	content: "R";
+}
+
+.box:nth-child(5)::before {
+	transform: translateY(-100%);
+	content: "E";
+}
+
+.box:nth-child(6)::before {
+	content: "➡️";
+}
+.box:nth-child(7)::before {
+	content: "➡️";
+}
+
+.button:hover .box:before {
+	transform: translateY(0);
+}
